<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eugene.myapplication.MainActivity">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <Button
                android:id="@+id/buttonCW1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonCW1_name" />

            <Button
                android:id="@+id/buttonHW1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonHW1_name" />

            <Button
                android:id="@+id/buttonCW4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonCW4_name" />

            <Button
                android:id="@+id/buttonHW4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonHW4_name" />

            <Button
                android:id="@+id/buttonCW5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonCW5_name" />

            <Button
                android:id="@+id/buttonHW5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonHW5_name" />

        </GridLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
